--- a/plugins/flexicontent_fields/file/en-GB.plg_flexicontent_fields_file.ini
+++ b/plugins/flexicontent_fields/file/en-GB.plg_flexicontent_fields_file.ini
@@ -30,7 +30,9 @@ FLEXI_FIELD_FILE_INACCESSIBLE_FILE_MSG_LOGGED_DESC="Display a custom message to 
 FLEXI_FIELD_FILE_INACCESSIBLE_FILE_ADD_VARS="Append file variables"
 FLEXI_FIELD_FILE_INACCESSIBLE_FILE_ADD_VARS_DESC="This is meant for developers, and will enable adding variables file_id, field_id, item_id to the no access URL, allowing for custom handling e.g. purchase item"
 
-FLEXI_FIELD_FILE_OPTIONAL_BUTTONS="Optional buttons"
+FLEXI_FIELD_FILE_ACTIONS="Actions"
+FLEXI_DOWNLOAD_CART="Download cart"
+FLEXI_DOWNLOAD_CART_SHORT="Cart"
 
 FLEXI_FIELD_FILE_ALLOW_DOWNLOAD="Allow downloads"
 FLEXI_FIELD_FILE_ALLOW_DOWNLOAD_DESC="Normally you would want to allow this, you can disable though if you are using downloads manager module (downloads cart module). <br/><br/><b>NOTE:</b> when downloads are enabled, then ACL/Access levels are always used to determine if frontend user can download the file"
@@ -136,7 +138,7 @@ FLEXI_DOWNLOAD_NOTIFICATION="Email notifications <br/> <small> when a file is do
 FLEXI_DOWNLOAD_HIT_NOTIFICATION="Send hit notifications"
 FLEXI_DOWNLOAD_HIT_NOTIFICATION_DESC="Enable this to send notifications emails when a file is downloaded"
 FLEXI_NOTIFICATION_DOWNLOAD_TEXTE="Notification text"
-FLEXI_NOTIFICATION_DOWNLOAD_TEXTE_DESC="The text that will be sent for every file. <br/><br/> <b>NOTE:</b> <br/> you may use these replacements: <br/> %%language_string%%, <br/> __file_id__ <br/> __file_name__ <br/> __item_title__ <br/> __item_url__"
+FLEXI_NOTIFICATION_DOWNLOAD_TEXTE_DESC="The text that will be sent for every file. <br/><br/> <b>NOTE:</b> <br/> you may use these replacements: <br/> %%language_string%%, <br/> __file_hits__ <br/> __file_id__ <br/> __file_name__ <br/> __item_title__ <br/> __item_url__"
 FLEXI_SEND_TO="Send TO"
 FLEXI_SPE_EMAIL="to specific emails"
 FLEXI_SPE_EMAIL_DESC="Notifications for any file will be sent these email(s) seperate emails with comma ,"
